fix search product